--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "dev": "env-cmd ./config/dev.env nodemon src/index.js"
+    "dev": "env-cmd ./config/dev.env nodemon src/index.js",
+    "test": "env-cmd ./config/test.env jest --watch --runInBand"
   },
+  
+  "jest": {
+    "testEnvironment": "node"
+  }
+
+  ,
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -24,6 +30,7 @@
   },
   "devDependencies": {
     "env-cmd": "^8.0.2",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6"
   }
 }
